# Promotion-Variant-Chess

./: .gitignore  ANDROID_RELEASE.md  CHANGELOG.md  CODE_AUDIT.md  CODE_ROADMAP.md  COMPLETE_GAME_DESIGN.md  FEATURE_SCOPE.md  GAME_PLAN.md  MASTER_PROJECT_PLAN.md  PRODUCTION_READINESS_PLAN.md  README.md  TECHNICAL_DOCS.md  TESTING.md  UNDO_FEATURE_PLAN.md  VERSION1_DESIGN_RETROSPECTIVE.md  capacitor.config.ts  extract_dinos.py  index.html  package-lock.json  package.json  playwright.config.ts  privacy.html  test_bonus_logic.ts  test_fen_queens.ts  test_fen_queens_simple.js  test_pawn.ts  test_pawn_simple.js  test_pawn_valid.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
benchmarks/: perft.html  results.html  search.html
docs/: ACCEPTANCE_TESTS.md  ARCHITECTURE_FAQ.md  DEFINITION_OF_DONE.md  INCIDENT_RESPONSE.md  LOAD_TEST_PLAN.md  MASTER_PROJECT_PLAN.md  PART1_SUMMARY.md  PART2_TECH_STACK.md  PART3_QUICK_START.md  PART4_FULL_TUTORIAL.md  PRODUCTION_RESILIENCE.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  RULEBOOK.md  SCOPE.md
e2e/: classic-mode.spec.ts  playtest.spec.ts  smoke.spec.ts  welcome-dashboard.spec.ts
load-tests/: http-load-test.js  stress-test.js  websocket-load-test.js
public/: init.js  manifest.json  sw.js  wasm-test.html
rust-engine/: .gitignore  Cargo.toml  README.md  build.ps1
rust-engine/src/: attacks.rs  bitboard.rs  eval.rs  lib.rs  magic.rs  movegen.rs  position.rs  search.rs  tt.rs  types.rs  zobrist.rs
server/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json  vitest.config.ts
src/: aiService.ts  aiWorker.ts  assetMutator.ts  boardStyles.ts  chessEngine.ts  classicMode.ts  constants.ts  dynamicLighting.ts  engineProvider.ts  eraBuildings.ts  eraSystem.ts  eraWorlds.ts  evaluationConstants.ts  gameController.ts  (+32 more)
(+75 files in other folders)
