[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"
authors = ["Chess Engine"]
description = "High-performance chess engine with bitboards, compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3"

# Better error messages in debug mode
console_error_panic_hook = { version = "0.1.7", optional = true }

# For serialization between Rust and JS
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
