[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"
authors = ["Chess Engine"]
description = "High-performance chess engine with bitboards, compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tournament"
path = "src/bin/tournament.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3"

# Better error messages in debug mode
console_error_panic_hook = { version = "0.1.7", optional = true }

# For serialization between Rust and JS
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

# Tournament runner dependencies (native only, not compiled into WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.9"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
indicatif = "0.17"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
